--- a/openclash.ini
+++ b/openclash.ini
@@ -11,9 +11,9 @@
 ;DNS防泄露：支持
 
 ;规则集定义
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/LongYin-cn/openclash.ini/main/Direct.list?token=GHSAT0AAAAAACT72J3OT5BXI7CHAK6KQCWCZUKO4TQ
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/LongYin-cn/openclash.ini/main/ProxyLite.list?token=GHSAT0AAAAAACT72J3OQFIVXSPBWMRQ6YCGZUKO5AQ
-ruleset=🤖 AI,https://raw.githubusercontent.com/LongYin-cn/openclash.ini/main/AI.list?token=GHSAT0AAAAAACT72J3PJVCMFH3N76LHPMDYZUKO3XQ
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/LongYin-cn/openclash.ini/main/Direct.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/LongYin-cn/openclash.ini/main/ProxyLite.list
+ruleset=🤖 AI,https://raw.githubusercontent.com/LongYin-cn/openclash.ini/main/AI.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
