--- a/openclash.ini
+++ b/openclash.ini
@@ -2,7 +2,7 @@
 ;不要随意改变关键字，否则会导致出错
 ;自用规则
 
-;去广告：支持
+;去广告：不支持
 ;自动测速：支持
 ;应用分流：支持
 ;增强中国IP段：支持
@@ -53,27 +53,27 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 
 ;策略组定义
-custom_proxy_group=🚀 节点选择`select`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🐸 手动切换
-custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]🐸 手动切换
-custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🪟 Microsoft`select`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🐸 手动切换`[]🚀 节点选择
-custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]🐸 手动切换`[]🚀 节点选择
-custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]🐸 手动切换
-custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]🐸 手动切换
-custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]🐸 手动切换
-custom_proxy_group=📢 FCM`select`[]🚀 节点选择`[]🐸 手动切换
-custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🐸 手动切换
-custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
+custom_proxy_group=🚀 节点选择`select`[]🐸 手动切换`[]DIRECT`.*
+custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT`.*
+custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🐸 手动切换`.*
+custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]🐸 手动切换`.*
+custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT`.*
+custom_proxy_group=🪟 Microsoft`select`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT`.*
+custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT`.*
+custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT`.*
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🐸 手动切换`[]🚀 节点选择`.*
+custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]🐸 手动切换`[]🚀 节点选择`.*
+custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]🐸 手动切换`.*
+custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]🐸 手动切换`.*
+custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]🐸 手动切换`.*
+custom_proxy_group=📢 FCM`select`[]🚀 节点选择`[]🐸 手动切换`.*
+custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT`.*
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🐸 手动切换`.*
+custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换`.*
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换`.*
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换`.*
 custom_proxy_group=🐸 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 
